# nrf52833-rtic-serial-interrupt

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
